fixed missing background behind portfolio images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,8 @@
 .container {
     width:960px;
     margin: auto;
-    background-color:white
+    background-color:white;
+    overflow:auto;
 
 }
 
@@ -37,7 +38,7 @@ h2 {
     font-family: Georgia, 'Times New Roman', Times, serif;
     margin-left:20px;
     margin-bottom:15px;
-    margin-top:120px;
+    margin-top:100px;
     font-size:200%;
     padding-top:25px;
     padding-bottom:10px;
@@ -90,18 +91,13 @@ p {
 
 .portfolio {
     size:200px;
-    padding: 30px 30px 30px 30px;
-    margin:auto;
-    position:relative;
-}
-
-.portfolioleft {
+    padding:30px 20px 30px 20px;
+    width:33%;
     float:left;
+    position:relative;
+
 }
 
-.portfolioright {
-    float:right;
-}
 
 .portfoliotext {
     position:absolute;
